{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 49,
  "lineage": "4b80c662-00fa-9b7f-a333-4b7dbf3ed9f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MYIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035504165590:internet-gateway/igw-04d76fdc27e92f192",
            "id": "igw-04d76fdc27e92f192",
            "owner_id": "035504165590",
            "tags": {
              "name": "terraform_IGW_demo"
            },
            "tags_all": {
              "name": "terraform_IGW_demo"
            },
            "vpc_id": "vpc-072c9e67b8bfad2ee"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MYRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035504165590:route-table/rtb-00d9aa1f5ac649db3",
            "id": "rtb-00d9aa1f5ac649db3",
            "owner_id": "035504165590",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d76fdc27e92f192",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "terraform_main_route_table_demo"
            },
            "tags_all": {
              "name": "terraform_main_route_table_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-072c9e67b8bfad2ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MYIGW",
            "aws_vpc.terraform_vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MYRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d940edccdb2510",
            "route_table_id": "rtb-00d9aa1f5ac649db3",
            "subnet_id": "subnet-0049ee25d41caa1fb"
          },
          "dependencies": [
            "aws_internet_gateway.MYIGW",
            "aws_route_table.MYRT",
            "aws_subnet.public-subnet1",
            "aws_vpc.terraform_vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MYSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035504165590:security-group/sg-067f0862de2141aa3",
            "description": "allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067f0862de2141aa3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "MYSG",
            "name_prefix": "",
            "owner_id": "035504165590",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072c9e67b8bfad2ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035504165590:subnet/subnet-0049ee25d41caa1fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0049ee25d41caa1fb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035504165590",
            "tags": {
              "name": "terraform_public_subnet1_demo"
            },
            "tags_all": {
              "name": "terraform_public_subnet1_demo"
            },
            "vpc_id": "vpc-072c9e67b8bfad2ee"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035504165590:subnet/subnet-06e7f6e593b8f3d6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-06e7f6e593b8f3d6d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035504165590",
            "tags": {
              "name": "terraform_public_subnet2_demo"
            },
            "tags_all": {
              "name": "terraform_public_subnet2_demo"
            },
            "vpc_id": "vpc-072c9e67b8bfad2ee"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035504165590:subnet/subnet-0400c1313ad3aab79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0400c1313ad3aab79",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035504165590",
            "tags": {
              "name": "terraform_public_subnet3_demo"
            },
            "tags_all": {
              "name": "terraform_public_subnet3_demo"
            },
            "vpc_id": "vpc-072c9e67b8bfad2ee"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035504165590:vpc/vpc-072c9e67b8bfad2ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0cc0a42dac47019f9",
            "default_route_table_id": "rtb-0bb147eccda841561",
            "default_security_group_id": "sg-0f35ec546607de67f",
            "dhcp_options_id": "dopt-2b250351",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-072c9e67b8bfad2ee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb147eccda841561",
            "owner_id": "035504165590",
            "tags": {
              "name": "terraform_vpc_demo"
            },
            "tags_all": {
              "name": "terraform_vpc_demo"
            }
          }
        }
      ]
    }
  ]
}